Change background color of button to fix low contrast issue

--- a/style.css
+++ b/style.css
@@ -817,8 +817,8 @@ h4 {
     color: #F3976C!important;
 }
 
-.btn-atomic-tangerine {
-    background: #F3976C;
+.btn-dark-slate-blue {
+    background: #364577;
     color: #FFFFFF!important;
 }
 
